--- a/build.yaml
+++ b/build.yaml
@@ -4,5 +4,5 @@
 # "board". For a dongleless setup, you will need to modify both "board" and
 # "shield". Please see "readme.md" for more details.
 include:
-  - board: raytac_mdbt50q_rx_green
+  - board: nRF52840-MDBT50Q_RX-verD
     shield: slicemk_ergodox_dongle
